chore(Dockerfile): allow to override memory settings using JAVA_OPTS
- add JAVA_OPTS to Dockerfile and define default memory settings
- clear default CATALINA_OPTS in tomcat image
- add other default wildfly settings to PREPEND_JAVA_OPTS variable
- document how to use docker memory limits instead of JVM settings